# CITP

./: .gitignore  README.md
BCITP/: citp.maude  pnat.maude  test.maude
Dev/: Makefile  Makefile.in  README  config.status  configure
Dev/src/: Core.maude  Formatting.maude  Knowledge-base.maude  Language.maude  Makefile  Makefile.am  Makefile.in  SpeX.tar  citp.maude  run-citp.maude
Dev/src/CommonLibs/: ATerm.maude  Configuration.maude  Formatting.maude  Num.maude  Path.maude  QidSet.maude  Read.maude  String.maude  StringList.maude  Term.maude
Dev/src/Lang/Base/Common/: Attributes.maude  Nominals.maude  Operations.maude  Predicates.maude  PropSymbols.maude  Sorts.maude
Dev/src/Lang/CITP/: Bridge.maude  SpecLang.maude  preamble.maude
Dev/src/REPL/: IO.maude  Interpreter.maude
Dev/src/REPL/Examples/: Echo-files.maude  Echo.maude
Dev/src/SAP/: Grammar.maude  Interpreter.maude
Tool/: AUTHORS  citp.maude  configure.ac
Tool/src/: CITP.maude  Core.maude  Database.maude  Makefile.am  Processor.maude  quit.maude  run-CITP.maude  run-citp.maude
Tool/src/CommonLibs/: Dictionary.maude  Qid.maude  QidList.maude  QidList2.maude  String.maude
Tool/src/Lang/Base/Common/: CSList.maude  Renaming.maude  Sentences.maude  Typed-modalities.maude
Tool/src/Lang/CITP/: Bridge.maude  Data.maude  Language.maude  Processor.maude  preamble.maude  reduction-strategies.maude
Tool/src/REPL/: Prompt.maude  REPL.maude  Snippet.maude
Tool/src/REPL/Examples/: Echo-multiline.maude
Tool/src/SAP/: Compat.maude  SAP.maude  Snippet.maude
WCITP/: TODO.txt  citp.html  mediator.py  (+1 more)
(+163 files in other folders)
